# agentic-code-tutor-experiments

./: .gitignore  DESIGN.md  MANIFEST.in  Makefile  README.md  plan.org  pyproject.toml  pytest.ini  setup.py
annotated-code-guide/: IMPLEMENTATION_GUIDE.md  ORCHESTRATION_FILES.md  README.md  analyzer.py  cli.py  config.py  file_reader.py  logger.py  session.py  teaching_session.py
docs/: LLM_REGRESSION_TESTING.md
examples/: calculator.py
research/: README.md  ai-assisted-code-review.md  conversational-ai-education.md  learning-by-teaching.md  llm-personalized-learning.md  program-comprehension.md  socratic-tutoring-and-its.md
src/code_tutor/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  exercise_generator.py  exercise_manager.py  file_reader.py  logger.py  proof_analyzer.py  proof_reader.py  proof_session.py  session.py  teaching_session.py
tests/: __init__.py  conftest.py  contracts.py  metrics.py  test_analyzer_mocked.py  test_contracts.py  test_golden_samples.py  test_integration.py  test_llm_judge.py  test_parsing.py
tests/golden_samples/code_review/sample_001/: expected.json  input.json
