[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-tutor"
version = "0.1.0"
description = "An intelligent, respectful code review and tutoring CLI tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Code Tutor Contributors"}
]
keywords = ["code-review", "tutoring", "education", "ai", "claude", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.0",
    "anthropic>=0.18.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/clarissalittler/agentic-code-tutor-experiments"
Repository = "https://github.com/clarissalittler/agentic-code-tutor-experiments"
Issues = "https://github.com/clarissalittler/agentic-code-tutor-experiments/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
code-tutor = "code_tutor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
